OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Approval_Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Approval_Policy_Key__c</fullName>
    <label>Approval Policy Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>