OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set when the requirement has been fully satisfied/verified.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>