OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Friendly label shown to users for this requirement; can differ from the backend name.</description>
    <formula>Vendor_Program_Requirement__r.Vendor_Program__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Label</label>
    <type>Text</type>
</CustomField>