OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Target due date for completing this requirement.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>