OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Due_Date_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Override_Reason__c</fullName>
    <description>Reason provided when overriding the requirement due date.</description>
    <label>Due Date Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>