OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Is_Inherited__c.field-meta.xml
<CustomField>
    <fullName>Is_Inherited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the requirement was inherited from a parent program/group rather than directly assigned.</description>
    <inlineHelpText>Set to true if copied directly from Vendor Program-Side Definition</inlineHelpText>
    <label>Is Inherited</label>
    <type>Checkbox</type>
</CustomField>