OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Is_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks that the inherited requirement has been overridden for this onboarding.</description>
    <inlineHelpText>Set this to True to Override</inlineHelpText>
    <label>Is Overridden</label>
    <type>Checkbox</type>
</CustomField>