OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <description>Lookup to the parent onboarding record (Dealer + Program + Vendor)</description>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Requirements</relationshipLabel>
    <relationshipName>Onboarding_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>