OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Override_Action__c.field-meta.xml
<CustomField>
    <fullName>Override_Action__c</fullName>
    <label>Override Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waive Requirement</fullName>
            </value>
            <value>
                <fullName>Treat as Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>