OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Override_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Override_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>