OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Override_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Override_Approved_On__c</fullName>
    <label>Override Approved On</label>
    <type>DateTime</type>
</CustomField>