OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <description>Classification of the requirement (e.g., data collection, document upload, approval).</description>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Requirement_Type_Values</valueSetName>
    </valueSet>
</CustomField>