OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Requires_Files__c.field-meta.xml
<CustomField>
    <fullName>Requires_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates supporting files must be uploaded before the requirement can be completed.</description>
    <label>Requires Files</label>
    <type>Checkbox</type>
</CustomField>