OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist_Complete</valueSetName>
    </valueSet>
</CustomField>