OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Agreement_Requirements.recordType-meta.xml
<RecordType>
    <fullName>Agreement_Requirements</fullName>
    <active>true</active>
    <description>Requirement type used for Agreement Records</description>
    <label>Agreement Requirements</label>
</RecordType>