OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Auto_Insurance_Requirements.recordType-meta.xml
<RecordType>
    <fullName>Auto_Insurance_Requirements</fullName>
    <active>true</active>
    <description>Requirement type used for Auto Insurance Records</description>
    <label>Auto Insurance Requirements</label>
</RecordType>