OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Background_Check.recordType-meta.xml
<RecordType>
    <fullName>Background_Check</fullName>
    <active>true</active>
    <description>Requirement type used for Background Check Records</description>
    <label>Background Check</label>
</RecordType>