OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Business_License.recordType-meta.xml
<RecordType>
    <fullName>Business_License</fullName>
    <active>true</active>
    <description>Requirement type used for Business License Records</description>
    <label>Business License</label>
</RecordType>