OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Chuzo_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Chuzo_Agreement</fullName>
    <active>true</active>
    <description>Requirement type used for Chuzo Agreement Records</description>
    <label>Chuzo Agreement</label>
</RecordType>