OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Compliance.recordType-meta.xml
<RecordType>
    <fullName>Compliance</fullName>
    <active>true</active>
    <description>Requirement type used for Compliance Records</description>
    <label>Compliance</label>
</RecordType>