OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Requirement type used for Contract Records</description>
    <label>Contract</label>
</RecordType>