OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Credit_Check.recordType-meta.xml
<RecordType>
    <fullName>Credit_Check</fullName>
    <active>true</active>
    <description>Requirement type used for Credit Check Records</description>
    <label>Credit Check</label>
</RecordType>