OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Drivers_License.recordType-meta.xml
<RecordType>
    <fullName>Drivers_License</fullName>
    <active>true</active>
    <description>Requirement type used for Driver&apos;s License Records</description>
    <label>Driver&apos;s License</label>
</RecordType>