OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Employment_Form.recordType-meta.xml
<RecordType>
    <fullName>Employment_Form</fullName>
    <active>true</active>
    <description>Requirement type used for Employment Records</description>
    <label>Employment Form</label>
</RecordType>