OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/ERP_Setup.recordType-meta.xml
<RecordType>
    <fullName>ERP_Setup</fullName>
    <active>true</active>
    <description>Requirement type used for ERP Setup Records</description>
    <label>ERP Setup</label>
</RecordType>