OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/General_Liability_Insurance_Requirement.recordType-meta.xml
<RecordType>
    <fullName>General_Liability_Insurance_Requirement</fullName>
    <active>true</active>
    <description>Requirement type used for General Liability Insurance Records</description>
    <label>General Liability Insurance Requirement</label>
</RecordType>