OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Interview.recordType-meta.xml
<RecordType>
    <fullName>Interview</fullName>
    <active>true</active>
    <description>Requirement type used for Interview Records</description>
    <label>Interview</label>
</RecordType>