OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Net_Terms.recordType-meta.xml
<RecordType>
    <fullName>Net_Terms</fullName>
    <active>true</active>
    <description>Requirement type used for Net Terms Records</description>
    <label>Net Terms</label>
</RecordType>