OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Personal_Guarantee.recordType-meta.xml
<RecordType>
    <fullName>Personal_Guarantee</fullName>
    <active>true</active>
    <description>Requirement type used for Personal Guarantee Records</description>
    <label>Personal Guarantee</label>
</RecordType>