OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/SubAgent_License_Agreement.recordType-meta.xml
<RecordType>
    <fullName>SubAgent_License_Agreement</fullName>
    <active>true</active>
    <description>Requirement type used for SubAgent License Agreement Records</description>
    <label>SubAgent License Agreement</label>
</RecordType>