OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Terms_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Terms_Conditions</fullName>
    <active>true</active>
    <description>Requirement type used for Terms &amp; Conditions Records</description>
    <label>Terms &amp; Conditions</label>
</RecordType>