OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <description>Requirement type used for Training Records</description>
    <label>Training</label>
</RecordType>