OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Vendor_Order_Entry.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Order_Entry</fullName>
    <active>true</active>
    <description>Requirement type used for Vendor Order Entry records</description>
    <label>Vendor Order Entry</label>
</RecordType>