OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Requirement__c/recordTypes/Workers_Compensation_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Workers_Compensation_Insurance</fullName>
    <active>true</active>
    <description>Requirement type used for Worker&apos;s Compensation Insurance Records</description>
    <label>Worker&apos;s Compensation Insurance</label>
</RecordType>